# img

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
CMake/modules/: ConanHelper.cmake  Options.cmake  PlatformHelper.cmake  TestHelper.cmake
include/img/: basic_types.h  fmt.h  math.h  types.h
include/img/common/: fmt.h
include/img/internal/: explicit_type.h  promote.h  round.h  type_traits.h  types.h  utils.h
include/img/pixel/: conversations.h  format.h  pixel.h  traits.h
src/: placeholder.cc
